--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemon Webiste"
     />
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description" content="Enjoy delicious food from Hotel Little Lemon with online ordering and 
+    table reservation"/>
+    <meta name="og:image" content="logo.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
